# super_mario

src/: CMakeLists.txt  main.cpp
src/controller/: game.cpp
src/levels/: second_level.cpp  third_level.cpp  third_level.hpp
src/objects/: flying_enemy.cpp  flying_enemy.hpp  jumping_enemy.cpp  jumping_enemy.hpp
src/os_controls/os_api/: user_input.hpp
src/os_controls/windows/: user_input.cpp
src/ui/console/: console_ui_factory.cpp  console_ui_factory.hpp
src/ui/console/ui_objects/: CMakeLists.txt  console_flying_enemy.cpp  console_flying_enemy.hpp  console_jumping_enemy.cpp  console_jumping_enemy.hpp
src/ui/qt/: qt_game_map.cpp  qt_game_map.hpp  qt_ui_factory.cpp  qt_ui_factory.hpp  qt_ui_obj.hpp  qt_ui_obj_rect_adapter.cpp  qt_ui_obj_rect_adapter.hpp
src/ui/qt/ui_objects/: CMakeLists.txt  qt_box.cpp  qt_box.hpp  qt_enemy.cpp  qt_enemy.hpp  qt_flying_enemy.cpp  qt_flying_enemy.hpp  qt_full_box.cpp  qt_full_box.hpp  qt_jumping_enemy.cpp  qt_jumping_enemy.hpp  qt_mario.cpp  qt_mario.hpp  qt_money.cpp  qt_money.hpp  qt_ship.cpp  qt_ship.hpp
